# MeetingApp

./: .gitignore  CMakeLists.txt  LICENSE  README.md
app/: CMakeLists.txt  api_example.cpp  app.cpp
include/MeetingLib/: Database.hpp  Schema.hpp
src/: CMakeLists.txt  Database.cpp  Database.hpp  Schema.cpp
tests/: CMakeLists.txt  db_tests.cpp
